feat: Implement manage_system intent
- Added 'manage_system' intent handling for actions:
  - uptime: Displays system uptime.
  - update: Runs 'apt update && apt upgrade -y && apt dist-upgrade -y'.
  - reboot: Executes forced reboot ('reboot -f').
  - shutdown: Executes shutdown ('shutdown -h now').
- Created actions/manage_system_action.py for command execution logic.
- Created intent_handlers/handle_manage_system.py for intent routing.
- Updated NLU instruction template with new actions and examples.
- Updated command dispatcher to route the new intent.
- NOTE: Requires passwordless sudo for update/reboot/shutdown commands.

--- a/config/app_aliases.json
+++ b/config/app_aliases.json
@@ -1,17 +1,15 @@
 {
-  "стим": "steam",
-  "тимс": "teams",
-  "блокнот": "subl",
-  "телеграм": "telegram",
-  "хром": "google-chrome",
-  "Chrome": "google-chrome",
-  "chrome": "google-chrome",
-  "firefox": "firefox",
-  "файрфокс": "firefox",
-  "gimp": "gimp",
-  "гимп": "gimp",
-  "discord": "discord",
-  "дискорд": "discord",
-  "офис": "lowriter",
-  "ofice": "lowriter"
+    "блокнот": "subl",
+    "браузер": "google-chrome",
+    "гимп": "gimp",
+    "дискорд": "discord",
+    "офис": "lowriter",
+    "себе": "telegram",
+    "стим": "steam",
+    "тг": "telegram",
+    "телега": "telegram",
+    "телеграм": "telegram",
+    "тимс": "teams",
+    "файрфокс": "firefox",
+    "хром": "google-chrome"
 }
