refactor: Implement LLM response generation and improve app control
- Refactored core logic into familiar.py with process_text_command.
- Modified telegram_bot.py to use the new core engine.
- Updated nlu_processor.py to handle both NLU intent extraction and LLM response generation based on structured data.
- Rewrote all intent handlers (manage_system, manage_app, add_alias) to return structured dictionaries instead of strings.
- Integrated xdotool into manage_app_action.py for enhanced window activation (including attempting to activate from tray).
- Improved PID finding logic in manage_app_action.py to be more robust and avoid self-detection.
- Adjusted manage_app handler logic to separate launching and activation steps.

--- a/config/app_aliases.json
+++ b/config/app_aliases.json
@@ -9,6 +9,7 @@
     "тг": "telegram",
     "телега": "telegram",
     "телеграм": "telegram",
+    "терминал": "guake",
     "тимс": "teams",
     "файрфокс": "firefox",
     "хром": "google-chrome"
